--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "make lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
@@ -15,14 +16,23 @@
   "bugs": {
     "url": "https://github.com/Paranoidream/frontend-project-lvl1/issues"
   },
-
-    "type": "module",
-    "homepage": "https://github.com/Paranoidream/frontend-project-lvl1#readme",
-    "dependencies": {
-      "debug": "^4.3.4",
-      "lodash": "^4.17.21"
-    },
-    "bin": {
-      "brain-games": "bin/brain-games.js"
-    }
+  "type": "module",
+  "homepage": "https://github.com/Paranoidream/frontend-project-lvl1#readme",
+  "dependencies": {
+    "debug": "^4.3.4",
+    "lodash": "^4.17.21"
+  },
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "eslint": "^8.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.4",
+    "eslint-plugin-promise": "^6.0.0"
+  }
 }
