--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
   "bugs": {
     "url": "https://github.com/Paranoidream/frontend-project-lvl1/issues"
   },
-  "type": "module",
+  "type": "commonjs",
   "homepage": "https://github.com/Paranoidream/frontend-project-lvl1#readme",
   "dependencies": {
     "debug": "^4.3.4",
-    "lodash": "^4.17.21"
+    "gulp-imagemin": "^7.1.0",
+    "lodash": "^4.17.21",
+    "readline-sync": "^1.4.10"
   },
   "bin": {
-    "brain-games": "bin/brain-games.js"
+    "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.7",
