--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "bin": {
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js"
+    "brain-even": "bin/brain-even.js",
+    "brain-calc": "bin/brain-calc.js"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.30.7",
