--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0"
-  }
+  },
+   "dependencies": {
+    "readline-sync": "^1.4.10"
+    }
 }
