--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "description": "project",
-  "main": "index.js",
+  "main": "src/index.js",
   "extends": "eslint:recommended",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -30,10 +30,10 @@
     "eslint": "^8.3.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-react": "^7.27.1"
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-config-airbnb-base": "^15.0.0"
   },
    "dependencies": {
-    "readline-sync": "^1.4.10",
-    "eslint-config-airbnb-base": "^15.0.0"
+    "readline-sync": "^1.4.10"
     }
 }
